// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Textarea Auto Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 bXdTZD sc-laRQdt eNnewb sc-iNqMzA gaoBlc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 bXdTZD sc-laRQdt eNnewb sc-iNqMzA gaoBlc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cqnrjx sc-laRQdt kpetXs sc-iNqMzA gaoBlc"
      disabled=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Min Max Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 bXdTZD sc-laRQdt eNnewb sc-iNqMzA gaoBlc"
      rows="4"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 bXdTZD sc-laRQdt gIpkxK sc-iNqMzA gaoBlc"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Read Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 bXdTZD sc-laRQdt eNnewb sc-iNqMzA gaoBlc"
      readonly=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 bXdTZD sc-laRQdt eNnewb sc-iNqMzA gaoBlc"
      placeholder="Type something..."
    />
  </div>
</div>
`;
